# tauri-plugin-synced-store

./: Cargo.toml
examples/tauri-app/: package-lock.json  package.json
examples/tauri-app/src/: App.vue  main.ts
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/bindings/: Count.ts
examples/tauri-app/src-tauri/src/: main.rs
examples/tauri-app/src/stores/: useCountStore.ts  useCountTomlStore.ts
src/: builders.rs  lib.rs  saveable_state.rs  synced_state.rs  synced_state_toml.rs
src/utils/: create_dir_all_without_file_name.rs  mod.rs
