[package]
name = "tauri-plugin-synced-state"
version = "0.1.0"
authors = ["KPidS"]
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
serde = "1.0.151"
tauri = "1.2.2"
tokio = "1.23.0"
toml = "0.5.10"
ts-rs = "6.2.1"
